--- a/beam-csv-dataio/pom.xml
+++ b/beam-csv-dataio/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>beam-system</artifactId>
         <groupId>org.esa.beam</groupId>
-        <version>5.0-SNAPSHOT</version>
+        <version>5.0-GS-SNAPSHOT</version>
         <relativePath>../beam-system/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
