--- a/beam-plugin-parent/pom.xml
+++ b/beam-plugin-parent/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <!--<beam.version>[4.10,6-SNAPSHOT)</beam.version>-->
-        <beam.version>5.0-SNAPSHOT</beam.version>
+        <beam.version>5.0-GS-SNAPSHOT</beam.version>
         <ceres.version>0.14-SNAPSHOT</ceres.version>
         <geotools.version>2.7.4</geotools.version>
         <jide.version>3.5.3</jide.version>
