--- a/beam-visat/pom.xml
+++ b/beam-visat/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam-system</artifactId>
-        <version>5.0-SNAPSHOT</version>
+        <version>5.0-GS-SNAPSHOT</version>
         <relativePath>../beam-system/pom.xml</relativePath>
     </parent>
 
