--- a/beam-plugin-parent/pom.xml
+++ b/beam-plugin-parent/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>beam-parent</artifactId>
         <groupId>org.esa.beam</groupId>
-        <version>1</version>
+        <version>1-GS</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beam-plugin-parent</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1-GS-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>BEAM Plugin Parent</name>
