--- a/beam-statistics-op/pom.xml
+++ b/beam-statistics-op/pom.xml
@@ -47,7 +47,7 @@
         </dependency>
     </dependencies>
 
-    <repositories>
+    <!-- repositories>
         <repository>
             <id>bc-mvn-repo</id>
             <name>Public Maven Repository at Brockmann Consult</name>
@@ -65,6 +65,11 @@
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
             <url>http://download.osgeo.org/webdav/geotools/</url>
+        </repository>
+        <repository>
+            <id>geosolutions</id>
+            <name>GeoSolutions maven repository</name>
+            <url>http://maven.geo-solutions.it/</url>
         </repository>
         <repository>
             <id>geotoolkkit</id>
@@ -98,7 +103,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories -->
 
     <distributionManagement>
         <repository>
