--- a/beam-system/pom.xml
+++ b/beam-system/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam-parent</artifactId>
-        <version>1</version>
+        <version>1-GS</version>
     </parent>
 
     <packaging>pom</packaging>
