--- a/lib-hdf/pom.xml
+++ b/lib-hdf/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam-parent</artifactId>
-        <version>1</version>
+        <version>1-GS</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
