--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <url>http://www.brockmann-consult.de/beam-wiki</url>
     <groupId>org.esa.beam</groupId>
     <artifactId>beam-parent</artifactId>
-    <version>1</version>
+    <version>1-GS</version>
     <packaging>pom</packaging>
 
     <organization>
@@ -83,6 +83,11 @@
             <name>Open Source Geospatial Foundation Repository</name>
             <url>http://download.osgeo.org/webdav/geotools/</url>
         </repository>
+        <repository>
+          <id>geosolutions</id>
+          <name>GeoSolutions libraries repository</name>
+          <url>http://maven.geo-solutions.it/</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -112,7 +117,20 @@
         </pluginRepository>
     </pluginRepositories>
 
+<profiles>
+   <profile>
+   <id>deploygeosolutions</id>
     <distributionManagement>
+      <repository>
+       <uniqueVersion>false</uniqueVersion>
+       <id>geosolutions</id>
+       <url>ftp://demo.geo-solutions.it</url>
+      </repository>
+    </distributionManagement>
+    </profile>
+</profiles>    
+
+    <!-- distributionManagement>
         <repository>
             <id>bc-mvn-repo-public</id>
             <name>Public Maven Repository at Brockmann Consult</name>
@@ -125,8 +143,8 @@
             <url>scp://www.brockmann-consult.de/var/www/www.brockmann-consult.de/mvn/os</url>
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
-    </distributionManagement>
-
+    </distributionManagement -->
+    
     <build>
         <outputDirectory>../modules/${project.artifactId}-${project.version}</outputDirectory>
 
@@ -299,6 +317,11 @@
                 <artifactId>wagon-ssh</artifactId>
                 <version>1.0-beta-7</version>
             </extension>
+            <extension>                                  
+             <groupId>org.apache.maven.wagon</groupId>   
+             <artifactId>wagon-ftp</artifactId>           
+             <version>1.0-beta-2</version>               
+            </extension>                                
         </extensions>
     </build>
 
