--- a/beam-time-series-tool/pom.xml
+++ b/beam-time-series-tool/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam-plugin-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1-GS-SNAPSHOT</version>
         <relativePath>../beam-plugin-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
