--- a/blue-marble-worldmap/pom.xml
+++ b/blue-marble-worldmap/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam-plugin-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1-GS-SNAPSHOT</version>
         <relativePath>../beam-plugin-parent/pom.xml</relativePath>
     </parent>
 
