--- a/beam-system/pom.xml
+++ b/beam-system/pom.xml
@@ -37,7 +37,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <beam.version>5.0-GS-SNAPSHOT</beam.version>
-        <ceres.version>0.14-SNAPSHOT</ceres.version>
+        <ceres.version>0.14-GS-SNAPSHOT</ceres.version>
         <geotools.version>8-SNAPSHOT</geotools.version>
         <jide.version>3.5.3</jide.version>
         <!-- This property is set in beam-parent; reason? see there!-->
